# bluepet

./: LICENSE  README.md
bluepet/: .gdbinit  Cargo.toml  Embed.toml
bluepet/.cargo/: config
bluepet/data/: pet2001-logo.prg
bluepet/src/: lib.rs  main.rs
bluepet/src/keyboard/: mod.rs
bluepet/src/storage/: mod.rs
bluepet/src/video/: mod.rs
mos6502/: Cargo.toml
mos6502/data/: 6502_functional_test.hex  6502_functional_test.lst
mos6502/src/: lib.rs
pet/: Cargo.toml
pet/src/: lib.rs
pet/src/io/: mod.rs
